# PRA

./: .gitignore
ARVORE/: main.cpp  node.h  tree.h
ARVORE_B/: btree.h  main.cpp
FILA/: CMakeLists.txt  main.cpp  queue.cpp  queue.h
PILHA/: main.cpp  stack.cpp  stack.h  stacknode.h
T01/: CMakeLists.txt  MOCK_names.txt  SegmentReader.h  StackBegin.h  comparators.cpp  comparators.h  constants.h  doublelist.cpp  doublelist.h  doublenode.cpp  generator.cpp  generator.h  indexador.cpp  indexador.h  main.cpp  names.txt  node.cpp  node.h  pseudo_name_generator.cpp  pseudo_name_generator.h  pseudo_number_generator.cpp  student.cpp  student.h  student_factory.h  student_status.h  t.sh  timer.cpp  timer.h
T02/: CMakeLists.txt  SegmentReader.h  comparators.cpp  comparators.h  constants.h  doublelist.cpp  doublenode.h  main.cpp  pseudo_name_generator.cpp  pseudo_number_generator.h  quicksort.h  student_factory.h  timer.h
T03/: .gitignore  CMakeLists.txt  btree.h  doublelist.h  main.cpp  node.h  pseudo_name_generator.cpp  pseudo_name_generator.h  student.cpp  student.h  student_factory.h  student_generator.cpp  student_generator.h
